--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eject": "react-scripts eject",
     "electron-dev": "cross-env DEV_URL=http://localhost:3000 concurrently 'yarn start' 'wait-on http://localhost:3000 && electron .'",
     "electron": "yarn build && electron ./main.js",
-    "package": "yarn build && electron-packager . --ignore='(src|node_modules|yarn.lock|README.md|.gitignore)'"
+    "package": "yarn build && electron-packager . --ignore='(src|node_modules|yarn.lock|README.md|.gitignore|public)'"
   },
   "eslintConfig": {
     "extends": "react-app"
