--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron-dev": "cross-env DEV_URL=http://localhost:3000 concurrently 'yarn start' 'wait-on http://localhost:3000 && electron .'",
-    "electron": "yarn build && electron ./main.js",
+    "electron": "yarn build && electron ./index.js",
     "package": "yarn build && electron-packager . --ignore='(src|node_modules|yarn.lock|README.md|.gitignore|public)'"
   },
   "eslintConfig": {
